force-app/main/default/objects/Retail_Order__c/Retail_Order__c.object-meta.xml
<CustomObject>
    <label>Retail Order</label>
    <nameField>
        <displayFormat>ORD-{0000}</displayFormat>
        <label>Retail Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>