force-app/main/default/objects/Retail_Order__c/fields/Retail_Customer__c.field-meta.xml
<CustomField>
    <fullName>Retail_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Customer</label>
    <referenceTo>Retail_Customer__c</referenceTo>
    <relationshipLabel>Retail Orders</relationshipLabel>
    <relationshipName>Retail_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>