force-app/main/default/objects/Retail_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total_Amount</label>
    <summarizedField>Retail_Order_Item__c.Line_Total__c</summarizedField>
    <summaryForeignKey>Retail_Order_Item__c.Retail_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>