force-app/main/default/objects/Retail_Order__c/validationRules/No_Complete_Without_Items.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Complete_Without_Items</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    Total_Amount__c = 0
)</errorConditionFormula>
    <errorMessage>Order cannot be completed without items.</errorMessage>
</ValidationRule>