force-app/main/default/objects/Retail_Order__c/validationRules/No_Create_As_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Create_As_Cancelled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    ISPICKVAL(Status__c, &quot;Cancelled&quot;)
)</errorConditionFormula>
    <errorMessage>New orders cannot be created as Cancelled.</errorMessage>
</ValidationRule>